// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babel 7 babel-plugin-jest-hoist 1. automatic react runtime: 1. automatic react runtime 1`] = `

jest.mock('./App', () => () => <div>Hello world</div>);


      ↓ ↓ ↓ ↓ ↓ ↓

var _jsxFileName = '/root/project/src/file.js';
_getJestObj().mock(
  './App',
  () => () =>
    /*#__PURE__*/ _jsxDEV(
      'div',
      {
        children: 'Hello world',
      },
      void 0,
      false,
      {
        fileName: _jsxFileName,
        lineNumber: 1,
        columnNumber: 32,
      },
      this,
    ),
);
import {jsxDEV as _jsxDEV} from 'react/jsx-dev-runtime';
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 2. top level mocking: 2. top level mocking 1`] = `

require('x');

jest.enableAutomock();
jest.disableAutomock();


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().enableAutomock();
_getJestObj().disableAutomock();
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 7 babel-plugin-jest-hoist 3. within a block: 3. within a block 1`] = `

beforeEach(() => {
  require('x');
  jest.mock('someNode');
});


      ↓ ↓ ↓ ↓ ↓ ↓

function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
beforeEach(() => {
  _getJestObj().mock('someNode');
  require('x');
});

`;

exports[`babel 7 babel-plugin-jest-hoist 4. within a block with no siblings: 4. within a block with no siblings 1`] = `

beforeEach(() => {
  jest.mock('someNode');
});


      ↓ ↓ ↓ ↓ ↓ ↓

function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
beforeEach(() => {
  _getJestObj().mock('someNode');
});

`;

exports[`babel 7 babel-plugin-jest-hoist 5. required \`jest\` within \`jest\`: 5. required \`jest\` within \`jest\` 1`] = `

const {jest} = require('@jest/globals');

jest.mock('some-module', () => {
  jest.requireActual('some-module');
});


      ↓ ↓ ↓ ↓ ↓ ↓

const {jest} = require('@jest/globals');
jest.mock('some-module', () => {
  jest.requireActual('some-module');
});

`;

exports[`babel 7 babel-plugin-jest-hoist 6. imported jest.mock within jest.mock: 6. imported jest.mock within jest.mock 1`] = `

import {jest} from '@jest/globals';

jest.mock('some-module', () => {
  jest.mock('some-module');
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().mock('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
import {jest} from '@jest/globals';

`;

exports[`babel 7 babel-plugin-jest-hoist 7. global jest.mock within jest.mock: 7. global jest.mock within jest.mock 1`] = `

jest.mock('some-module', () => {
  jest.mock('some-module');
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().mock('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 8. imported jest.requireActual in jest.mock: 8. imported jest.requireActual in jest.mock 1`] = `

import {jest} from '@jest/globals';

jest.mock('some-module', () => {
  jest.requireActual('some-module');
});

jest.requireActual('some-module');


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().requireActual('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
import {jest} from '@jest/globals';
jest.requireActual('some-module');

`;

exports[`babel 7 babel-plugin-jest-hoist 9. global jest.requireActual in jest.mock: 9. global jest.requireActual in jest.mock 1`] = `

jest.mock('some-module', () => {
  jest.requireActual('some-module');
});

jest.requireActual('some-module');


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().requireActual('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
jest.requireActual('some-module');

`;

exports[`babel 7 babel-plugin-jest-hoist 10. TS typeof usage in jest.mock: 10. TS typeof usage in jest.mock 1`] = `

jest.mock('some-module', () => {
  const actual = jest.requireActual('some-module');

  return jest.fn<typeof actual.method>();
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  const actual = jest.requireActual('some-module');
  return jest.fn();
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 11. jest.spyOn call on the imported module: 11. jest.spyOn call on the imported module 1`] = `

jest.mock('some-module', () => {
  const module = jest.requireActual('some-module');
  jest.spyOn(module, 'add');
  return module;
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  const module = jest.requireActual('some-module');
  _getJestObj().spyOn(module, 'add');
  return module;
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 12. jest.spyOn call in class constructor: 12. jest.spyOn call in class constructor 1`] = `

jest.mock('some-module', () => {
  const Actual = jest.requireActual('some-module');
  return class Mocked extends Actual {
    constructor() {
      super();
      jest.spyOn(this, 'add');
    }
  };
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  const Actual = jest.requireActual('some-module');
  return class Mocked extends Actual {
    constructor() {
      super();
      _getJestObj().spyOn(this, 'add');
    }
  };
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 13. jest.hoisted const factory: 13. jest.hoisted const factory 1`] = `

const {mockGet} = jest.hoisted(() => ({mockGet: jest.fn()}));

jest.mock('./api', () => ({get: mockGet}));


      ↓ ↓ ↓ ↓ ↓ ↓

const {mockGet} = _getJestObj().hoisted(() => ({
  mockGet: _getJestObj().fn(),
}));
_getJestObj().mock('./api', () => ({
  get: mockGet,
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 14. jest.hoisted let factory: 14. jest.hoisted let factory 1`] = `

let label = jest.hoisted(() => 'hoisted-label');


      ↓ ↓ ↓ ↓ ↓ ↓

let label = _getJestObj().hoisted(() => 'hoisted-label');
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 15. jest.hoisted var factory: 15. jest.hoisted var factory 1`] = `

var label = jest.hoisted(() => 'hoisted-label');


      ↓ ↓ ↓ ↓ ↓ ↓

var label = _getJestObj().hoisted(() => 'hoisted-label');
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 16. jest.hoisted multi declarators preserves whole statement: 16. jest.hoisted multi declarators preserves whole statement 1`] = `

const a = jest.hoisted(() => 1),
  b = 2;


      ↓ ↓ ↓ ↓ ↓ ↓

const a = _getJestObj().hoisted(() => 1),
  b = 2;
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 17. jest.hoisted bare call hoists like jest.mock: 17. jest.hoisted bare call hoists like jest.mock 1`] = `

require('x');
jest.hoisted(() => (globalThis.__seeded__ = true));


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().hoisted(() => (globalThis.__seeded__ = true));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 7 babel-plugin-jest-hoist 18. jest.hoisted bare call rewrites jest refs in factory: 18. jest.hoisted bare call rewrites jest refs in factory 1`] = `

require('x');
jest.hoisted(() => {
  globalThis.__fn__ = jest.fn();
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().hoisted(() => {
  globalThis.__fn__ = _getJestObj().fn();
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 7 babel-plugin-jest-hoist 19. jest.hoisted rewrites jest refs in factory body: 19. jest.hoisted rewrites jest refs in factory body 1`] = `

const {mockFn} = jest.hoisted(() => ({mockFn: jest.fn()}));
jest.mock('./api', () => ({get: mockFn}));


      ↓ ↓ ↓ ↓ ↓ ↓

const {mockFn} = _getJestObj().hoisted(() => ({
  mockFn: _getJestObj().fn(),
}));
_getJestObj().mock('./api', () => ({
  get: mockFn,
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 23. jest.hoisted preserves relative order of multiple declarations: 23. jest.hoisted preserves relative order of multiple declarations 1`] = `

require('x');
const a = jest.hoisted(() => 1);
const b = jest.hoisted(() => 2);


      ↓ ↓ ↓ ↓ ↓ ↓

const a = _getJestObj().hoisted(() => 1);
const b = _getJestObj().hoisted(() => 2);
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 7 babel-plugin-jest-hoist 24. jest.hoisted with destructuring: 24. jest.hoisted with destructuring 1`] = `

const {one, two} = jest.hoisted(() => ({one: 1, two: 2}));
jest.mock('./api', () => ({one, two}));


      ↓ ↓ ↓ ↓ ↓ ↓

const {one, two} = _getJestObj().hoisted(() => ({
  one: 1,
  two: 2,
}));
_getJestObj().mock('./api', () => ({
  one,
  two,
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 25. jest.mock can reference jest.hoisted binding declared later in file: 25. jest.mock can reference jest.hoisted binding declared later in file 1`] = `

jest.mock('./api', () => ({get: mockGet}));

const {mockGet} = jest.hoisted(() => ({mockGet: jest.fn()}));


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('./api', () => ({
  get: mockGet,
}));
const {mockGet} = _getJestObj().hoisted(() => ({
  mockGet: _getJestObj().fn(),
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 7 babel-plugin-jest-hoist 29. jest.hoisted and jest.mock preserve source order when interleaved: 29. jest.hoisted and jest.mock preserve source order when interleaved 1`] = `

require('x');
jest.hoisted(() => (globalThis.__a__ = 1));
jest.mock('./first', () => ({value: 'first'}));
jest.hoisted(() => (globalThis.__b__ = 2));
jest.mock('./second', () => ({value: 'second'}));


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().hoisted(() => (globalThis.__a__ = 1));
_getJestObj().mock('./first', () => ({
  value: 'first',
}));
_getJestObj().hoisted(() => (globalThis.__b__ = 2));
_getJestObj().mock('./second', () => ({
  value: 'second',
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 8 babel-plugin-jest-hoist 30. automatic react runtime: 30. automatic react runtime 1`] = `

jest.mock('./App', () => () => <div>Hello world</div>);


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock(
  './App',
  () => () =>
    /*#__PURE__*/ _jsxDEV(
      'div',
      {
        children: 'Hello world',
      },
      void 0,
      false,
    ),
);
import {jsxDEV as _jsxDEV} from 'react/jsx-dev-runtime';
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 31. top level mocking: 31. top level mocking 1`] = `

require('x');

jest.enableAutomock();
jest.disableAutomock();


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().enableAutomock();
_getJestObj().disableAutomock();
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 8 babel-plugin-jest-hoist 32. within a block: 32. within a block 1`] = `

beforeEach(() => {
  require('x');
  jest.mock('someNode');
});


      ↓ ↓ ↓ ↓ ↓ ↓

function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
beforeEach(() => {
  _getJestObj().mock('someNode');
  require('x');
});

`;

exports[`babel 8 babel-plugin-jest-hoist 33. within a block with no siblings: 33. within a block with no siblings 1`] = `

beforeEach(() => {
  jest.mock('someNode');
});


      ↓ ↓ ↓ ↓ ↓ ↓

function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
beforeEach(() => {
  _getJestObj().mock('someNode');
});

`;

exports[`babel 8 babel-plugin-jest-hoist 34. required \`jest\` within \`jest\`: 34. required \`jest\` within \`jest\` 1`] = `

const {jest} = require('@jest/globals');

jest.mock('some-module', () => {
  jest.requireActual('some-module');
});


      ↓ ↓ ↓ ↓ ↓ ↓

const {jest} = require('@jest/globals');
jest.mock('some-module', () => {
  jest.requireActual('some-module');
});

`;

exports[`babel 8 babel-plugin-jest-hoist 35. imported jest.mock within jest.mock: 35. imported jest.mock within jest.mock 1`] = `

import {jest} from '@jest/globals';

jest.mock('some-module', () => {
  jest.mock('some-module');
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().mock('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
import {jest} from '@jest/globals';

`;

exports[`babel 8 babel-plugin-jest-hoist 36. global jest.mock within jest.mock: 36. global jest.mock within jest.mock 1`] = `

jest.mock('some-module', () => {
  jest.mock('some-module');
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().mock('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 37. imported jest.requireActual in jest.mock: 37. imported jest.requireActual in jest.mock 1`] = `

import {jest} from '@jest/globals';

jest.mock('some-module', () => {
  jest.requireActual('some-module');
});

jest.requireActual('some-module');


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().requireActual('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
import {jest} from '@jest/globals';
jest.requireActual('some-module');

`;

exports[`babel 8 babel-plugin-jest-hoist 38. global jest.requireActual in jest.mock: 38. global jest.requireActual in jest.mock 1`] = `

jest.mock('some-module', () => {
  jest.requireActual('some-module');
});

jest.requireActual('some-module');


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  _getJestObj().requireActual('some-module');
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
jest.requireActual('some-module');

`;

exports[`babel 8 babel-plugin-jest-hoist 39. TS typeof usage in jest.mock: 39. TS typeof usage in jest.mock 1`] = `

jest.mock('some-module', () => {
  const actual = jest.requireActual('some-module');

  return jest.fn<typeof actual.method>();
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  const actual = jest.requireActual('some-module');
  return jest.fn();
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 40. jest.spyOn call on the imported module: 40. jest.spyOn call on the imported module 1`] = `

jest.mock('some-module', () => {
  const module = jest.requireActual('some-module');
  jest.spyOn(module, 'add');
  return module;
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  const module = jest.requireActual('some-module');
  _getJestObj().spyOn(module, 'add');
  return module;
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 41. jest.spyOn call in class constructor: 41. jest.spyOn call in class constructor 1`] = `

jest.mock('some-module', () => {
  const Actual = jest.requireActual('some-module');
  return class Mocked extends Actual {
    constructor() {
      super();
      jest.spyOn(this, 'add');
    }
  };
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('some-module', () => {
  const Actual = jest.requireActual('some-module');
  return class Mocked extends Actual {
    constructor() {
      super();
      _getJestObj().spyOn(this, 'add');
    }
  };
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 42. jest.hoisted const factory: 42. jest.hoisted const factory 1`] = `

const {mockGet} = jest.hoisted(() => ({mockGet: jest.fn()}));

jest.mock('./api', () => ({get: mockGet}));


      ↓ ↓ ↓ ↓ ↓ ↓

const {mockGet} = _getJestObj().hoisted(() => ({
  mockGet: _getJestObj().fn(),
}));
_getJestObj().mock('./api', () => ({
  get: mockGet,
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 43. jest.hoisted let factory: 43. jest.hoisted let factory 1`] = `

let label = jest.hoisted(() => 'hoisted-label');


      ↓ ↓ ↓ ↓ ↓ ↓

let label = _getJestObj().hoisted(() => 'hoisted-label');
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 44. jest.hoisted var factory: 44. jest.hoisted var factory 1`] = `

var label = jest.hoisted(() => 'hoisted-label');


      ↓ ↓ ↓ ↓ ↓ ↓

var label = _getJestObj().hoisted(() => 'hoisted-label');
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 45. jest.hoisted multi declarators preserves whole statement: 45. jest.hoisted multi declarators preserves whole statement 1`] = `

const a = jest.hoisted(() => 1),
  b = 2;


      ↓ ↓ ↓ ↓ ↓ ↓

const a = _getJestObj().hoisted(() => 1),
  b = 2;
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 46. jest.hoisted bare call hoists like jest.mock: 46. jest.hoisted bare call hoists like jest.mock 1`] = `

require('x');
jest.hoisted(() => (globalThis.__seeded__ = true));


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().hoisted(() => (globalThis.__seeded__ = true));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 8 babel-plugin-jest-hoist 47. jest.hoisted bare call rewrites jest refs in factory: 47. jest.hoisted bare call rewrites jest refs in factory 1`] = `

require('x');
jest.hoisted(() => {
  globalThis.__fn__ = jest.fn();
});


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().hoisted(() => {
  globalThis.__fn__ = _getJestObj().fn();
});
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 8 babel-plugin-jest-hoist 48. jest.hoisted rewrites jest refs in factory body: 48. jest.hoisted rewrites jest refs in factory body 1`] = `

const {mockFn} = jest.hoisted(() => ({mockFn: jest.fn()}));
jest.mock('./api', () => ({get: mockFn}));


      ↓ ↓ ↓ ↓ ↓ ↓

const {mockFn} = _getJestObj().hoisted(() => ({
  mockFn: _getJestObj().fn(),
}));
_getJestObj().mock('./api', () => ({
  get: mockFn,
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 52. jest.hoisted preserves relative order of multiple declarations: 52. jest.hoisted preserves relative order of multiple declarations 1`] = `

require('x');
const a = jest.hoisted(() => 1);
const b = jest.hoisted(() => 2);


      ↓ ↓ ↓ ↓ ↓ ↓

const a = _getJestObj().hoisted(() => 1);
const b = _getJestObj().hoisted(() => 2);
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;

exports[`babel 8 babel-plugin-jest-hoist 53. jest.hoisted with destructuring: 53. jest.hoisted with destructuring 1`] = `

const {one, two} = jest.hoisted(() => ({one: 1, two: 2}));
jest.mock('./api', () => ({one, two}));


      ↓ ↓ ↓ ↓ ↓ ↓

const {one, two} = _getJestObj().hoisted(() => ({
  one: 1,
  two: 2,
}));
_getJestObj().mock('./api', () => ({
  one,
  two,
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 54. jest.mock can reference jest.hoisted binding declared later in file: 54. jest.mock can reference jest.hoisted binding declared later in file 1`] = `

jest.mock('./api', () => ({get: mockGet}));

const {mockGet} = jest.hoisted(() => ({mockGet: jest.fn()}));


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().mock('./api', () => ({
  get: mockGet,
}));
const {mockGet} = _getJestObj().hoisted(() => ({
  mockGet: _getJestObj().fn(),
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}

`;

exports[`babel 8 babel-plugin-jest-hoist 58. jest.hoisted and jest.mock preserve source order when interleaved: 58. jest.hoisted and jest.mock preserve source order when interleaved 1`] = `

require('x');
jest.hoisted(() => (globalThis.__a__ = 1));
jest.mock('./first', () => ({value: 'first'}));
jest.hoisted(() => (globalThis.__b__ = 2));
jest.mock('./second', () => ({value: 'second'}));


      ↓ ↓ ↓ ↓ ↓ ↓

_getJestObj().hoisted(() => (globalThis.__a__ = 1));
_getJestObj().mock('./first', () => ({
  value: 'first',
}));
_getJestObj().hoisted(() => (globalThis.__b__ = 2));
_getJestObj().mock('./second', () => ({
  value: 'second',
}));
function _getJestObj() {
  const {jest} = require('@jest/globals');
  _getJestObj = () => jest;
  return jest;
}
require('x');

`;
